大概......做好了

--- a/zfile/WEB-INF/classes/application.properties
+++ b/zfile/WEB-INF/classes/application.properties
@@ -2,8 +2,8 @@ spring.config.import=classpath:application-default.properties
 
 zfile.debug=false
 
-zfile.log.path=/home/runner/zfile/.zfile-v4/logs
-zfile.db.path=/home/runner/zfile/.zfile-v4/db/zfile
+zfile.log.path=/home/runner/zfile-replit/.zfile-v4/logs
+zfile.db.path=/home/runner/zfile-replit/.zfile-v4/db/zfile
 
 zfile.preview.text.maxFileSizeKb=512
 
@@ -18,8 +18,8 @@ spring.datasource.driver-class-name=org.sqlite.JDBC
 spring.datasource.url=jdbc:sqlite:${zfile.db.path}
 
 ## mysql
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://:3306/zfile?characterEncoding=utf8&serverTimezone=Asia/Shanghai&useSSL=false&allowPublicKeyRetrieval=true
+#spring.datasource.driver-class-name=
+#spring.datasource.url=
 #spring.datasource.username=
 #spring.datasource.password=
 
