实际发现还是不能修改项目名称，所以改回去了，另外修复了给个因粗心导致的错误

--- a/zfile/WEB-INF/classes/application.properties
+++ b/zfile/WEB-INF/classes/application.properties
@@ -2,8 +2,8 @@ spring.config.import=classpath:application-default.properties
 
 zfile.debug=false
 
-zfile.log.path=/home/runner/${REPL_SLUG}/.zfile-v4/logs
-zfile.db.path=/home/runner/${REPL_SLUG}/.zfile-v4/db/zfile
+zfile.log.path=/home/runner/zfile-replit/.zfile-v4/logs
+zfile.db.path=/home/runner/zfile-replit/.zfile-v4/db/zfile
 
 zfile.preview.text.maxFileSizeKb=512
 
